# rakbank-shifa

./: .gitignore  README.md  app.py  config.yaml  embedding.py  extracted_text.txt  prepare_input_file.py  pyproject.toml
chroma_db/: chroma.sqlite3
